# gamma_utilities

./: .gitignore  README.md  TODO  config.yaml  config.yaml.rename  requirements.txt  requirements_manual.txt  setup.cfg  tool_me.py
apps/: database_analysis.py  database_checker.py  database_feeder.py  database_feeder_global_service.py  database_feeder_local_service.py  database_feeder_service.py  database_reScrape.py  database_reports.py  parallel_feed.py  save_config.py  xploiter.py
apps/analysis/: analytics.py  benchmark.py  kpis.py  network.py  queue.py  revenue.py  user.py
apps/checks/: base_objects.py  general.py
apps/data/: reward_data.py
apps/errors/: actions.py
apps/feeds/: hypervisor_periods.py  operations.py  price_paths.py  prices.py  queue.py  returns.py  returns_old.py  revenue_operations.py  static.py  status.py  users.py  utils.py
apps/hypervisor_periods/: base.py
apps/repair/: general.py  repair_prices.py
bins/: configuration.py
bins/apis/: __init__.py  angle_merkle.py  coingecko_utilities.py  etherscan_utilities.py  geckoterminal_helper.py  thegraph_utilities.py
bins/cache/: __init__.py  cache_utilities.py  files_manager.py
bins/checkers/: address.py  general.py  hypervisor.py
bins/config/: contructor.py  current.py  defaults.py  hardcodes.py  memory.py  (+1 more)
data/: price_token_address.json
tests/: comparator_test.py  hypervisors.py  indiscriminate_tst.py  manual_database_mods.py  protocols.py  test.py  test_onchain_data.py  test_onchain_onthefly.py  thegraph_vs_database.py  thegraph_vs_onchain_data.py  uncollected_fees.py  utils.py
(+287 files in other folders)
