[metadata]
name = gamma_utilities
version = 0.2.0
author = iospapios
url = https://github.com/iospap/gamma_utilities
description = Gamma tooling
long_description = file: README.md
long_description_content_type = text/markdown
keywords = gamma, web3, blockchain, ethereum, tooling
license = GNU GENERAL PUBLIC LICENSE
classifiers =
    Programming Language :: Python :: 3

[options]
packages = find:
install_requires =
    pandas
    PyYAML >= 6.0
    web3
    tqdm
    croniter
    bson
    pymongo
include_package_data = True

[options.package_data]
example = data/abi/*.json
* = README.md

[options.entry_points]
console_scripts = 
    tool_me = tool_me:main